syntax = "proto3";

package MsgStoreUser;

message MsgStoreUserData {
    firstName,
    lastName,
    dob,
    gender,
    household,
    status,
    monthlyIncome,
    monthlySavings,
    monthlyCharcoal,
    monthlyCharcoalExpense,
    stoveUsage,
    village,
    profilePicture,
    latitude,
    longitude,
    phoneNumber,
    verbalLanguage,
    capturedPolicy,
}
